style: fix download attestation button in dark mode

--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -51,10 +51,6 @@
     background-image: image-url("icons/download.svg");
   }
 
-  &.download-white {
-    background-image: image-url("icons/download-white.svg");
-  }
-
   &.lock {
     background-image: image-url("icons/lock.svg");
   }
